# analytics-engineering-service-mart

./: .gitignore  AGENTS.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  dbt_project.yml  profiles.yml  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  codeql.yml  scorecard.yml
analyses/: README.md
docs/: data-dictionary.md  data-lineage.md  implementation-roadmap.md  limitations.md  mart-output-preview.md  metric-definitions.md  modelling-decisions.md  public-readiness-audit.md  reviewer-guide.md  sample-data-plan.md  security-posture.md  test-plan.md
models/marts/: README.md  dim_service_category.sql  dim_team.sql  fact_case_performance.sql  fact_service_event.sql  mart_service_performance.sql  schema.yml
models/staging/: README.md  schema.yml  stg_case_categories.sql  stg_cases.sql  stg_service_events.sql  stg_targets.sql  stg_teams.sql
scripts/: export_mart_preview.py
seeds/: README.md  raw_case_categories.csv  raw_cases.csv  raw_service_events.csv  raw_targets.csv  raw_teams.csv  schema.yml
tests/: README.md  assert_fact_case_performance_row_count_matches_cases.sql  assert_int_case_lifecycle_non_negative_durations.sql  assert_int_service_sla_met_only_closed.sql  assert_int_service_sla_overdue_only_active.sql  assert_mart_service_performance_grain_unique.sql  assert_mart_service_performance_metrics_non_negative.sql
