[project]
name = "analytics-engineering-service-mart"
version = "0.1.0"
description = "A local dbt service mart portfolio project using synthetic operations data."
requires-python = ">=3.9"
license = "MIT"
dependencies = []

[project.optional-dependencies]
dev = [
    "dbt-duckdb>=1.8,<1.9",
]

[tool.setuptools]
packages = []
