[project]
name = "analytics-engineering-service-mart"
version = "0.1.0"
description = "A local dbt service mart portfolio project using synthetic operations data."
requires-python = ">=3.11"
license = "MIT"
dependencies = []

[project.optional-dependencies]
dev = [
    "dbt-duckdb>=1.8,<1.9",
    "filelock>=3.20.3",
    "msgpack>=1.2.1",
    "pip-audit>=2.9,<3",
    "requests>=2.33.0",
    "urllib3>=2.7.0",
]

[tool.setuptools]
packages = []
